--- a/scripts/go/configs/.golangci.toml
+++ b/scripts/go/configs/.golangci.toml
@@ -32,17 +32,28 @@ enable = [
   "exportloopref",
   "staticcheck",
   "structcheck",
-  # "stylecheck",
+  "stylecheck",
   "typecheck",
   "unconvert",
   "unused",
   "varcheck",
   "whitespace",
   "gocyclo",
+  #"unparam",
 ]
 
 # Disabled linters (might want them later)
 # "unparam"
+
+# Enable when appropriate
+[[issues.exclude-rules]]
+linters = ["stylecheck"]
+text = "ST1003"
+
+# Enable when appropriate
+[[issues.exclude-rules]]
+linters = ["stylecheck"]
+text = "ST1001"
 
 [[issues.exclude-rules]]
 linters = ["gosec"]
